# CircuitPython_hid_power_device

./: LESSONS_LEARNED.md  README.rst  README.rst.license  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: hid_power_device_simpletest.py  hid_power_device_ups_gpio.py
hid_power_device/: __init__.py  descriptor.py  device.py  reports.py
